<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lkj.calculator.MainActivity">



    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3">

        <TextView
            android:id="@+id/textExpression"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scrollHorizontally="true"
            android:textSize="25sp"/>



    </TableRow>


    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textResult"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="40sp"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/buttonLeftParenthesis"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="registerKey"
            android:text="@string/leftParenthesis"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/buttonRightParenthesis"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="registerKey"
            android:text="@string/rightParenthesis"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/buttonClr"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="registerKey"
            android:text="@string/clear"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/buttonDel"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="registerKey"
            android:text="@string/delete"
            android:textSize="30sp"/>



    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/tableRow3">

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="registerKey"
            android:text="@string/seven"
            android:textSize="30sp"
            android:layout_weight="1"/>

        <Button
            android:onClick="registerKey"
            android:text="@string/eight"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button8"/>

        <Button
            android:id="@+id/button9"
            android:text="@string/nine"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="registerKey"/>

        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/divide"
            android:textSize="30sp"
            android:onClick="registerKey"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/four"
            android:textSize="30sp"
            android:onClick="registerKey"/>

        <Button
            android:id="@+id/button5"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:text="@string/five"
            android:textSize="30sp"
            android:onClick="registerKey"/>

        <Button
            android:id="@+id/button6"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:text="@string/six"
            android:textSize="30sp"
            android:onClick="registerKey"/>

        <Button
            android:id="@+id/buttonMul"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/mutiply"
            android:textSize="30sp"
            android:onClick="registerKey"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/button1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="registerKey"
            android:textSize="30sp"
            android:text="@string/one"/>

        <Button
            android:id="@+id/button2"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="registerKey"
            android:text="@string/two"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/button3"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="registerKey"
            android:text="@string/three"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/buttonSub"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:onClick="registerKey"
            android:textSize="30sp"
            android:text="@string/minus"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/buttonDot"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="registerKey"
            android:text="@string/dot"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/button0"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="registerKey"
            android:text="@string/zero"
            android:textSize="30sp"/>



        <Button
            android:id="@+id/buttonEql"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="registerKey"
            android:text="@string/equals"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/buttonAdd"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="registerKey"
            android:text="@string/plus"
            android:textSize="30sp"/>

    </TableRow>




</TableLayout>
